--- a/Turfapp/templates/admin_usermanagement.html
+++ b/Turfapp/templates/admin_usermanagement.html
@@ -346,9 +346,7 @@
             <div class="col-lg-10 col-md-9 main-content">
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h2><i class="fas fa-users text-primary me-2"></i>User Management</h2>
-                    <button class="btn btn-primary">
-                        <i class="fas fa-plus me-1"></i> Add New User
-                    </button>
+                    
                 </div>
 
                 <!-- Filters -->
@@ -412,9 +410,9 @@
                                                 <img src="https://randomuser.me/api/portraits/men/32.jpg"
                                                     class="user-avatar" alt="User">
                                                 <div>
-                                                    <h6 class="mb-0">{{user.firsst_name}} {{user.last_name}}</h6>
+                                                    <h6 class="mb-0">{{user.first_name|upper}} {{user.last_name|upper}}</h6>
                                                     <small
-                                                        class="text-muted">@{{user.firsst_name}}{{user.last_name}}</small>
+                                                        class="text-muted">@{{user.first_name}}</small>
                                                 </div>
                                             </div>
                                         </td>
@@ -428,7 +426,7 @@
                                                     >
                                                     <i class="fas fa-eye me-1"></i> View
                                                 </a>
-                                                {% if user.is_active %}
+                                                {% if not user.is_blocked %}
                                                 <form method="post" action="{% url 'block_user' user.id %}"
                                                 style="display: inline;">
                                                 {% csrf_token %}
