search and filter

--- a/Turfapp/templates/player_booking.html
+++ b/Turfapp/templates/player_booking.html
@@ -1018,7 +1018,7 @@
                         ₹{{ booking.total_price }} <span>total</span>
                     </div>
                     
-                    {% if booking.status == 'COMPLETED' %}
+                    {% if booking.status == 'confirmed' %}
                     <div class="rating-container">
                         <div class="rating-value">Rate this turf:</div>
                         <div class="stars">
