--- a/Turfapp/templates/home.html
+++ b/Turfapp/templates/home.html
@@ -631,7 +631,7 @@
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'turfs' %}">Turfs</a></li>
                 <li><a href="{% url 'player_booking' %}">Bookings</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
             
             <div class="nav-buttons">
