--- a/Turfapp/templates/owner_dashboard.html
+++ b/Turfapp/templates/owner_dashboard.html
@@ -340,7 +340,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'turfreg' %}">
+                        <a class="nav-link" href="{% url 'turf_reg' %}">
                             <i class="fas fa-plus-circle"></i> Add Turf
                         </a>
                     </li>
