--- a/Turfapp/templates/turf.html
+++ b/Turfapp/templates/turf.html
@@ -629,7 +629,11 @@
             </a>
 
             <ul class="nav-links">
-                <li><a href="{% url 'home' %}">Home</a></li>
+                {% if request.user.role == 'admin' %}
+                <li><a href="{% url 'admin_dashboard' %}">home</a></li>
+                {%else%}
+                <li><a href="{% url 'home' %}">home</a></li>
+                {% endif %}
                 <li><a href="{% url 'turfs' %}" class="active">Turfs</a></li>
                 <li><a href="{% url 'player_booking' %}">My Bookings</a></li>
                 <li><a href="contact.html">Contact</a></li>
