--- a/Turfapp/templates/login.html
+++ b/Turfapp/templates/login.html
@@ -311,7 +311,7 @@
                 </div>
                 
                 <div class="forgot-password">
-                    <a href="forgot-password.html">Forgot password?</a>
+                    <a href="{% url 'password_reset' %}">Forgot password?</a>
                 </div>
                 
                 <button type="submit" class="btn">Sign In</button>
