--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -146,7 +146,7 @@
                 <p>Your password has been set. You may go ahead and log in now.</p>
             </div>
             
-            <a href="#" class="login-btn">Log In Now</a>
+            <a href="{% url 'login' %}" class="login-btn">Log In Now</a>
             
             <div class="security-tips">
                 <h3>Security Tips</h3>
